--- a/index.html
+++ b/index.html
@@ -125,11 +125,18 @@
 
 
         <main class="content">
-                <div class="titulo col-wide">
+                <div class="titulo col-wide" id="movie">
                     <h2> Filmes em cartaz </h2>
                 </div>
-                
-                <div class="filmes" id="movie">
+                <div class="scrollmenu">
+									  <a href='pages/filmes/F1.html'><img src="img/adão negro.jpg" alt='Adão Negro'></a>
+                    <a href='pages/filmes/F2.html'><img src="img/Avatar.jpeg" alt='Avatar'></a>
+                    <a href='pages/filmes/F3.html'><img src="img/divertida mente.jpg" alt='Divertida mente'></a>
+                    <a href='pages/filmes/F4.html'><img src="img/Nós.jpg" alt='Nós'></a>
+                    <a href='pages/filmes/F5.html'><img src="img/pantera negra.jpg" alt='Pantera Negra'></a>
+                    <a href='pages/filmes/F6.html'><img src="img/vingadores - ultimato.jpg" alt='Vingadores:Ultimato'></a>
+								</div>
+                <div class="filmes">
                     <a href='pages/filmes/F1.html'><img src="img/adão negro.jpg" alt='Adão Negro'></a>
                     <a href='pages/filmes/F2.html'><img src="img/Avatar.jpeg" alt='Avatar'></a>
                     <a href='pages/filmes/F3.html'><img src="img/divertida mente.jpg" alt='Divertida mente'></a>
@@ -160,7 +167,7 @@
                         
             <section class="local">
                 <div><h1>Localização</h1></div>
-                <div><p>Rua cinema animado patrão, 1509</p></div>
+                <div><p>Rua Padre Ayres, Número 255 em Miramar João Pessoa</p></div>
             </section>
 
             <section class="copyright col-wide">
