--- a/pages/filmes/F1.html
+++ b/pages/filmes/F1.html
@@ -1,128 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../../css/pages.css">
-	<link rel="stylesheet" href="../../css/filmes.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="icon" href="../../img/icone.svg">
-    <title>Cinetech</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="../../css/pages.css">
+  <link rel="stylesheet" href="../../css/filmes.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="icon" href="../../img/icone.svg">
+  <title>Cinetech</title>
 </head>
+
 <body>
-    <div class="layout">
+  <div class="layout">
 
-        <header class="header">
-            <a href="#" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
-            <nav>
-                <ul class="menu">
-                    <li><a href="../../pages/sobre.html">Sobre Nós</a></li>
-                    <li><a href="../../index.html">Filmes</a></li>
-                    <li><a href="#f">Comunicação</a></li>
-                </ul>
-            </nav>
+    <header class="header">
+      <a href="../../pages/sobre.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
+      <nav>
+        <ul class="menu">
+          <li><a href="../../pages/sobre.html">Sobre Nós</a></li>
+          <li><a href="../../index.html">Filmes</a></li>
+          <li><a href="#f">Comunicação</a></li>
+        </ul>
+      </nav>
 
-        </header>
+    </header>
 
-        <main class="content">
+    <main class="content">
 
-			<div class='movie'>
-				<img src="../../img/adão negro.jpg" alt="Adão Negro">
-				<div class="info">
-					<p class="sinotitle">Sinopse</p>
-					<p>Quase cinco mil anos após ter ganho poderes incríveis dos deuses egípcios, Adão Negro foi aprisionado. Agora,
-						ele é libertado de sua tumba e está pronto para desencadear sua forma peculiar de justiça no mundo moderno.
-					</p>
-					<p>Faixa etária: </p>
-					<p>13 anos</p>
-			</div>
-			<div class="sessoes">
-				<p>Sessões:</p>
-				<table>
-					<thead>
-						<tr>
-							<th id='firstcel'></th>
-							<th>Segunda-feira</th>
-							<th>Terça-feira</th>
-							<th>Quarta-feira</th>
-							<th>Quinta-feira</th>
-							<th>Sexta-feira</th>
-							<th>Sábado</th>
-							<th>Domingo</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>Filme 1</td>
-							<td>14:30 - 17:30 - 19:30</td>
-							<td>14:30 - 17:30 - 19:30</td>
-							<td>14:30 - 17:30 - 19:30</td>
-							<td>14:30 - 17:30 - 19:30</td>
-							<td>14:30 - 17:30 - 19:30</td>
-							<td>15:30 - 18:30 - 20:30</td>
-							<td>15:30 - 18:30 - 20:30</td>
-						</tr>
-						<tr>
-				</table>
-			</div>
-			</div>
-			<div class="preços">
-			<h2>Preços</h2>
-			<table>
-				<thead>
-					<tr>
-						<th id='secondcel'></th>
-						<th>Meia-entrada</th>
-						<th>Entrada inteira</th>
-					</tr>
-				<tbody>
-					<tr>
-						<td>14:00 às 18:00 (seg. à quin.)</td>
-						<td>R$ 15,00</td>
-						<td>R$ 30,00</td>
-					</tr>
-					<tr>
-						<td>18:00 às 22:00 (sex. à dom.)</td>
-						<td>R$ 18,00</td>
-						<td>R$ 36,00</td>
-					</tr>
-				</tbody>
-				</thead>
+      <div class='movie'>
+        <img src="../../img/adão negro.jpg" alt="Adão Negro">
+        <div class="detalhes">
+          <h1>Adão Negro</h1>
+          <div class="info">
+            <div class="sinopse">
+              <h2>Sinopse</h2>
+              <p>Quase cinco mil anos após ter ganho poderes incríveis dos deuses egípcios, Adão Negro foi aprisionado.
+                Agora, ele é libertado de sua tumba e está pronto para desencadear sua forma peculiar de justiça no
+                mundo
+                moderno.
+              </p>
+            </div>
+            <div class='idade'>
+              <h3>Faixa etária</h3>
+              <p>14</p>
+            </div>
+            <div class='duracao'>
+              <h3>Duração</h3>
+              <p>124 min</p>
+            </div>
+            <div class='genero'>
+              <h3>Gênero</h3>
+              <p>Ação, Fantasia</p>
+            </div>
+            <div class="sessoes">
+              <h3>Sessões</h3>
+              <table>
+                <tbody>
+                  <tr>
+                    <td>Seg. a Quin.</td>
+                    <td>14:30 - 17:30 - 19:30</td>
+                  </tr>
+                </tbody>
+                <tbody>
+                  <tr>
+                    <td>Sex. a Dom.</td>
+                    <td>15:30 - 18:30 - 20:30</td>
+                  </tr>
+              </table>
+            </div>
+          </div>
+        </div>
 
-			</table>
-			</div>
-		</main>
+      </div>
+      <div class="preços">
+        <h2>Tabela de preços</h2>
+        <table>
+          <thead>
+            <tr>
+              <th id='secondcel'></th>
+              <th>Meia-entrada</th>
+              <th>Entrada inteira</th>
+            </tr>
+          <tbody>
+            <tr>
+              <td>Seg. a Quin.</td>
+              <td>R$ 15,00</td>
+              <td>R$ 30,00</td>
+            </tr>
+            <tr>
+              <td>Sex. a Dom.</td>
+              <td>R$ 18,00</td>
+              <td>R$ 36,00</td>
+            </tr>
+          </tbody>
+          </thead>
 
-		<footer class="footer" id="f">
-		<section class="fale-conosco">   
-			<h2>Fale Conosco</h2>
-			<ul>
-				<li><p><a href='#'>cinetech@gmail.com <i class=""> </i></a></p></li>
-				<li><p><a href='https://api.whatsapp.com/send?phone=5583985003240'>(83) 98500-3240 <i class=""> </i></a></p></li>
-				<li><p><a href='#'>(83) 0800 089 015 <i class=""> </i></a></p></li>
-		</section> 
+        </table>
+      </div>
+    </main>
 
-		<section class="social">
-			<h1>Redes Sociais</h1>
-			<ul>
-			  <li><a href="#"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
-			  <li><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-			  <li><a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
-			</ul>
-		</section>
-					
-		<section class="local">
-			<div><h1>Localização</h1></div>
-			<div><p>Rua cinema animado patrão, 1509</p></div>
-		</section>
+    <footer class="footer" id="f">
+      <section class="fale-conosco">
+        <h2>Fale Conosco</h2>
+        <ul>
+          <li>
+            <p><a href='#'>cinetech@gmail.com <i class=""> </i></a></p>
+          </li>
+          <li>
+            <p><a href='https://api.whatsapp.com/send?phone=5583985003240'>(83) 98500-3240 <i class=""> </i></a></p>
+          </li>
+          <li>
+            <p><a href='#'>(83) 0800 089 015 <i class=""> </i></a></p>
+          </li>
+      </section>
 
-		<section class="copyright col-wide">
-			<p>Cinetech © 2022. Alguns direitos reservados.</p>
-		</section>
-		</footer>
-	
-	</div>
+      <section class="social">
+        <h1>Redes Sociais</h1>
+        <ul>
+          <li><a href="#"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+        </ul>
+      </section>
+
+      <section class="local">
+        <div>
+          <h1>Localização</h1>
+        </div>
+        <div>
+          <p>Rua Padre Ayres, Número 255 em Miramar João Pessoa</p>
+        </div>
+      </section>
+
+      <section class="copyright col-wide">
+        <p>Cinetech © 2022. Alguns direitos reservados.</p>
+      </section>
+    </footer>
+
+  </div>
 </body>
+
 </html>
