--- a/pages/filmes/F3.html
+++ b/pages/filmes/F3.html
@@ -15,7 +15,7 @@
     <div class="layout">
 
         <header class="header">
-            <a href="#" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
+            <a href="../../pages/sobre.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
             <nav>
                 <ul class="menu">
                     <li><a href="../../pages/sobre.html">Sobre Nós</a></li>
@@ -117,7 +117,7 @@
 						
 			<section class="local">
 				<div><h1>Localização</h1></div>
-				<div><p>Rua cinema animado patrão, 1509</p></div>
+				<div><p>Rua Padre Ayres, Número 255 em Miramar João Pessoa</p></div>
 			</section>
 
 			<section class="copyright col-wide">
