--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -14,7 +14,7 @@
     <div class="layout">
 
         <header class="header">
-            <a href="#" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
+            <a href="../pages/sobre.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
             <nav>
                 <ul class="menu">
                     <li><a href="../pages/sobre.html">Sobre Nós</a></li>
@@ -34,9 +34,12 @@
 				as melhores promoções e também deixamos contatos para elogios, criticas ou informações.</p>
 			</br>
 			<h2>Nossa estrutura</h2>
+          <a>Oferecemos a melhor estrutura, com cadeiras do tipo reclinavel com espuma confortável, sala com capacidade para 100 pessoas, com seis excelentes caixas de som acustica e tela que dispõe da melhor tecnologia. As salas possuem duas saídas de incêndio e sensores de gás e fumaça, escadarias retroilumindas e carpete de veludo na cor cinza.</a>
 			</br>
 			<h2>Localização</h2>
-			<a>Estamos localizados na...</a>
+			<a>Estamos localizados na Rua Padre Ayres, Número 255 em Miramar na Capital.</a>
+          </br>
+      <div class="mapa"><iframe class="col-wide" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1632.821654327379!2d-34.83668470564349!3d-7.123257076824536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7acdd3460a0a131%3A0x4f2bed354fe88f5b!2sRua%20Padre%20Ayres%2C%20255%20-%20Miramar%2C%20Jo%C3%A3o%20Pessoa%20-%20PB%2C%2058043-260!5e0!3m2!1spt-BR!2sbr!4v1666901157852!5m2!1spt-BR!2sbr" width="530" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 		</main>
 		<footer class="footer" id="f">
             <section class="fale-conosco">   
@@ -58,7 +61,7 @@
                         
             <section class="local">
                 <div><h1>Localização</h1></div>
-                <div><p>Rua cinema animado patrão, 1509</p></div>
+                <div><p>Rua Padre Ayres,255 em Miramar João Pessoa</p></div>
             </section>
 
             <section class="copyright col-wide">
