Alterações no menu e animações nos cartazes

--- a/pages/filmes/F1.html
+++ b/pages/filmes/F1.html
@@ -17,11 +17,11 @@
   <div class="layout">
 
     <header class="header">
-      <a href="../../pages/sobre.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
+      <a href="../../index.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
       <nav>
         <ul class="menu">
+          <li><a href="../../index.html">Home</a></li>
           <li><a href="../../pages/sobre.html">Sobre Nós</a></li>
-          <li><a href="../../index.html">Filmes</a></li>
           <li><a href="#f">Comunicação</a></li>
         </ul>
       </nav>
@@ -131,7 +131,7 @@
           <h1>Localização</h1>
         </div>
         <div>
-          <p>Rua Padre Ayres, Número 255 em Miramar João Pessoa</p>
+          <a href="https://goo.gl/maps/amv8DZQXdt1jqLfK7">Rua Padre Ayres, Número 255 em Miramar João Pessoa</a>
         </div>
       </section>
 
