--- a/pages/filmes/F2.html
+++ b/pages/filmes/F2.html
@@ -18,8 +18,8 @@
             <a href="../../pages/sobre.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
             <nav>
                 <ul class="menu">
+										<li><a href="../../index.html">Home</a></li>
                     <li><a href="../../pages/sobre.html">Sobre Nós</a></li>
-                    <li><a href="../../index.html">Filmes</a></li>
                     <li><a href="#f">Comunicação</a></li>
                 </ul>
             </nav>
@@ -116,7 +116,7 @@
                         
             <section class="local">
                 <div><h1>Localização</h1></div>
-                <div><p>Rua Padre Ayres, Número 255 em Miramar João Pessoa</p></div>
+                <div><a href="https://goo.gl/maps/amv8DZQXdt1jqLfK7">Rua Padre Ayres, Número 255 em Miramar João Pessoa</a></div>
             </section>
 
             <section class="copyright col-wide">
