--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,74 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/pages.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="icon" href="../../img/icone.svg">
-    <title>Cinetech</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="../css/pages.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="icon" href="../../img/icone.svg">
+  <title>Cinetech</title>
 </head>
+
 <body>
-    <div class="layout">
+  <div class="layout">
 
-        <header class="header">
-            <a href="../pages/sobre.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
-            <nav>
-                <ul class="menu">
-                    <li><a href="../pages/sobre.html">Sobre Nós</a></li>
-                    <li><a href="../index.html">Filmes</a></li>
-                    <li><a href="#f">Comunicação</a></li>
-                </ul>
-            </nav>
+    <header class="header">
+      <a href="../index.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
+      <nav>
+        <ul class="menu">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../pages/sobre.html">Sobre Nós</a></li>
+          <li><a href="#f">Comunicação</a></li>
+        </ul>
+      </nav>
 
-        </header>
+    </header>
 
-        <main class="content">
-			<h2>Quem somos? </h2>
-			<p>Apaixonados pelo oque fazemos, estamos no ramo do cinema há mais de 15 anos trazendo grandes lançamentos.
-				Acreditamos que filmes são a emoção da maneira mais pura, filmes nos fazem rir, chorar e viver grandes aventuras.
-			</p>
-			<p>Atualmente graças a era da tecnologia a conexão empresa-cliente ficou ainda melhor, estamos aqui para te ofertar
-				as melhores promoções e também deixamos contatos para elogios, criticas ou informações.</p>
-			</br>
-			<h2>Nossa estrutura</h2>
-          <a>Oferecemos a melhor estrutura, com cadeiras do tipo reclinavel com espuma confortável, sala com capacidade para 100 pessoas, com seis excelentes caixas de som acustica e tela que dispõe da melhor tecnologia. As salas possuem duas saídas de incêndio e sensores de gás e fumaça, escadarias retroilumindas e carpete de veludo na cor cinza.</a>
-			</br>
-			<h2>Localização</h2>
-			<a>Estamos localizados na Rua Padre Ayres, Número 255 em Miramar na Capital.</a>
-          </br>
-      <div class="mapa"><iframe class="col-wide" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1632.821654327379!2d-34.83668470564349!3d-7.123257076824536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7acdd3460a0a131%3A0x4f2bed354fe88f5b!2sRua%20Padre%20Ayres%2C%20255%20-%20Miramar%2C%20Jo%C3%A3o%20Pessoa%20-%20PB%2C%2058043-260!5e0!3m2!1spt-BR!2sbr!4v1666901157852!5m2!1spt-BR!2sbr" width="530" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-		</main>
-		<footer class="footer" id="f">
-            <section class="fale-conosco">   
-                <h2>Fale Conosco</h2>
-                <ul>
-                    <li><p><a href='#'>cinetech@gmail.com <i class=""> </i></a></p></li>
-                    <li><p><a href='https://api.whatsapp.com/send?phone=5583985003240'>(83) 98500-3240 <i class=""> </i></a></p></li>
-                    <li><p><a href='#'>(83) 0800 089 015 <i class=""> </i></a></p></li>
-            </section> 
+    <main class="content">
+      <h2>Quem somos? </h2>
+      <p>Apaixonados pelo oque fazemos, estamos no ramo do cinema há mais de 15 anos trazendo grandes lançamentos.
+        Acreditamos que filmes são a emoção da maneira mais pura, filmes nos fazem rir, chorar e viver grandes
+        aventuras.
+      </p>
+      <p>Atualmente graças a era da tecnologia a conexão empresa-cliente ficou ainda melhor, estamos aqui para te
+        ofertar
+        as melhores promoções e também deixamos contatos para elogios, criticas ou informações.</p>
+      </br>
+      <h2>Nossa estrutura</h2>
+      <a>Oferecemos a melhor estrutura, com cadeiras do tipo reclinavel com espuma confortável, sala com capacidade para
+        100 pessoas, com seis excelentes caixas de som acustica e tela que dispõe da melhor tecnologia. As salas possuem
+        duas saídas de incêndio e sensores de gás e fumaça, escadarias retroilumindas e carpete de veludo na cor
+        cinza.</a>
+      </br>
+      <h2>Localização</h2>
+      <a>Estamos localizados na Rua Padre Ayres, Número 255 em Miramar na Capital.</a>
+      </br>
+      <div class="mapa"><iframe class="col-wide"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1632.821654327379!2d-34.83668470564349!3d-7.123257076824536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7acdd3460a0a131%3A0x4f2bed354fe88f5b!2sRua%20Padre%20Ayres%2C%20255%20-%20Miramar%2C%20Jo%C3%A3o%20Pessoa%20-%20PB%2C%2058043-260!5e0!3m2!1spt-BR!2sbr!4v1666901157852!5m2!1spt-BR!2sbr"
+          width="530" height="380" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+    </main>
+    <footer class="footer" id="f">
+      <section class="fale-conosco">
+        <h2>Fale Conosco</h2>
+        <ul>
+          <li>
+            <p><a href='#'>cinetech@gmail.com <i class=""> </i></a></p>
+          </li>
+          <li>
+            <p><a href='https://api.whatsapp.com/send?phone=5583985003240'>(83) 98500-3240 <i class=""> </i></a></p>
+          </li>
+          <li>
+            <p><a href='#'>(83) 0800 089 015 <i class=""> </i></a></p>
+          </li>
+      </section>
 
-            <section class="social">
-                <h1>Redes Sociais</h1>
-                <ul>
-                  <li><a href="#"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
-                  <li><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
-                </ul>
-            </section>
-                        
-            <section class="local">
-                <div><h1>Localização</h1></div>
-                <div><p>Rua Padre Ayres,255 em Miramar João Pessoa</p></div>
-            </section>
+      <section class="social">
+        <h1>Redes Sociais</h1>
+        <ul>
+          <li><a href="#"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+        </ul>
+      </section>
 
-            <section class="copyright col-wide">
-                <p>Cinetech © 2022. Alguns direitos reservados.</p>
-            </section>
-        </footer>
-        
-    </div>
+      <section class="local">
+        <div>
+          <h1>Localização</h1>
+        </div>
+        <div><a href="https://goo.gl/maps/amv8DZQXdt1jqLfK7">Rua Padre Ayres,255 em Miramar João Pessoa</a></div>
+      </section>
+
+      <section class="copyright col-wide">
+        <p>Cinetech © 2022. Alguns direitos reservados.</p>
+      </section>
+    </footer>
+
+  </div>
 </body>
+
 </html>
