--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/slide.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="icon" href="img/icone.svg">
   <title>Cinetech</title>
 </head>
@@ -29,99 +30,31 @@
     </header>
 
     <nav class="slide">
-      <div class="carousel-wrapper">
-        <span id="item-1"></span>
-        <span id="item-2"></span>
-        <span id="item-3"></span>
-        <span id="item-4"></span>
-        <span id="item-5"></span>
-        <span id="item-6"></span>
-
-
-        <div class="carousel-item item-1">
-          <a href="#item-6" class="arrow-prev arrow"></a>
-          <a href="#item-2" class="arrow-next arrow"></a>
-          <div class='controls'>
-            <a href="#item-1" class='control-button'>.</a>
-            <a href="#item-2" class='control-button'>.</a>
-            <a href="#item-3" class='control-button'>.</a>
-            <a href="#item-4" class='control-button'>.</a>
-            <a href="#item-5" class='control-button'>.</a>
-            <a href="#item-6" class='control-button'>.</a>
-
-          </div>
-
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-
-        <div class="carousel-item item-2">
-          <a href="#item-1" class="arrow-prev arrow"></a>
-          <a href="#item-3" class="arrow-next arrow"></a>
-          <div class='controls'>
-            <a href="#item-1" class='control-button'>.</a>
-            <a href="#item-2" class='control-button'>.</a>
-            <a href="#item-3" class='control-button'>.</a>
-            <a href="#item-4" class='control-button'>.</a>
-            <a href="#item-5" class='control-button'>.</a>
-            <a href="#item-6" class='control-button'>.</a>
-
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/Cartaz 1.png" class="d-block w-100" alt="Cartaz 1">
+          </div>
+          <div class="carousel-item">
+            <img src="img/Cartaz 2.png" class="d-block w-100" alt="Cartaz 2">
+          </div>
+          <div class="carousel-item">
+            <img src="img/Cartaz 3.png" class="d-block w-100" alt="Cartaz 3">
           </div>
         </div>
-
-        <div class="carousel-item item-3">
-          <a href="#item-2" class="arrow-prev arrow"></a>
-          <a href="#item-4" class="arrow-next arrow"></a>
-          <div class='controls'>
-            <a href="#item-1" class='control-button'>.</a>
-            <a href="#item-2" class='control-button'>.</a>
-            <a href="#item-3" class='control-button'>.</a>
-            <a href="#item-4" class='control-button'>.</a>
-            <a href="#item-5" class='control-button'>.</a>
-            <a href="#item-6" class='control-button'>.</a>
-
-          </div>
-        </div>
-
-        <div class="carousel-item item-4">
-          <a href="#item-3" class="arrow-prev arrow"></a>
-          <a href="#item-5" class="arrow-next arrow"></a>
-          <div class='controls'>
-            <a href="#item-1" class='control-button'>.</a>
-            <a href="#item-2" class='control-button'>.</a>
-            <a href="#item-3" class='control-button'>.</a>
-            <a href="#item-4" class='control-button'>.</a>
-            <a href="#item-5" class='control-button'>.</a>
-            <a href="#item-6" class='control-button'>.</a>
-
-          </div>
-        </div>
-
-        <div class="carousel-item item-5">
-          <a href="#item-4" class="arrow-prev arrow"></a>
-          <a href="#item-6" class="arrow-next arrow"></a>
-          <div class='controls'>
-            <a href="#item-1" class='control-button'>.</a>
-            <a href="#item-2" class='control-button'>.</a>
-            <a href="#item-3" class='control-button'>.</a>
-            <a href="#item-4" class='control-button'>.</a>
-            <a href="#item-5" class='control-button'>.</a>
-            <a href="#item-6" class='control-button'>.</a>
-
-          </div>
-        </div>
-
-        <div class="carousel-item item-6">
-          <a href="#item-5" class="arrow-prev arrow"></a>
-          <a href="#item-1" class="arrow-next arrow"></a>
-          <div class='controls'>
-            <a href="#item-1" class='control-button'>.</a>
-            <a href="#item-2" class='control-button'>.</a>
-            <a href="#item-3" class='control-button'>.</a>
-            <a href="#item-4" class='control-button'>.</a>
-            <a href="#item-5" class='control-button'>.</a>
-            <a href="#item-6" class='control-button'>.</a>
-
-          </div>
-        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </nav>
 
