Ajustes para a primeira etapa do projeto

--- a/pages/filmes/F1.html
+++ b/pages/filmes/F1.html
@@ -17,7 +17,7 @@
   <div class="layout">
 
     <header class="header">
-      <a href="../../index.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
+      <a href="../../index.html" class="logo"><img class='ticket' src="../../img/logo.svg" alt="Cinetech"></a>
       <nav>
         <ul class="menu">
           <li><a href="../../index.html">Home</a></li>
@@ -31,6 +31,7 @@
     <main class="content">
 
       <div class='movie'>
+        <h1 class='filmetit'>Adão Negro</h1>
         <img src="../../img/adão negro.jpg" alt="Adão Negro">
         <div class="detalhes">
           <h1>Adão Negro</h1>
@@ -39,11 +40,9 @@
               <h2>Sinopse</h2>
               <p>Quase cinco mil anos após ter ganho poderes incríveis dos deuses egípcios, Adão Negro foi aprisionado.
                 Agora, ele é libertado de sua tumba e está pronto para desencadear sua forma peculiar de justiça no
-                mundo
-                moderno.
-              </p>
+                mundo moderno.</p>
             </div>
-            <div class='idade'>
+            <div class='idade14'>
               <h3>Faixa etária</h3>
               <p>14</p>
             </div>
@@ -71,34 +70,166 @@
                   </tr>
               </table>
             </div>
+            <div class='mob-sess'>
+              <table>
+                <tbody>
+                  <tr>
+                    <td>Segunda a Quinta</td>
+                  </tr>
+                  <tr>
+                    <td>14:30 - 17:30 - 19:30</td>
+                  </tr>
+                  <tr>
+                    <td>Sexta a Domingo</td>
+                  </tr>
+                  <tr>
+                    <td>15:30 - 18:30 - 20:30</td>
+                  </tr>
+                <tbody>
+              </table>
+            </div>
           </div>
         </div>
 
       </div>
+      <div class='pricetitle'>
+        <h1>Tabela de preços</h1><img src="../../img/ticket.svg">
+      </div>
       <div class="preços">
-        <h2>Tabela de preços</h2>
-        <table>
+        <table class='tabela'>
           <thead>
             <tr>
-              <th id='secondcel'></th>
-              <th>Meia-entrada</th>
-              <th>Entrada inteira</th>
+              <th class='topcel'></th>
+              <th class='meia'>Meia-entrada</th>
+              <th class='inteira'>Entrada inteira</th>
+              <th>
+                <div class='imgddd'>
+                  Meia-entrada<img src="../../img/óculos 3d 2.svg">
+                </div>
+              </th>
+              <th>
+                <div class='imgddd'>
+                  Entrada inteira<img src="../../img/óculos 3d 2.svg">
+                </div>
+              </th>
             </tr>
+          </thead>
           <tbody>
             <tr>
               <td>Seg. a Quin.</td>
-              <td>R$ 15,00</td>
-              <td>R$ 30,00</td>
+              <td>R$ 10,00</td>
+              <td>R$ 20,00</td>
+              <td>R$ 13,00</td>
+              <td>R$ 26,00</td>
             </tr>
             <tr>
               <td>Sex. a Dom.</td>
+              <td>R$ 15,00</td>
+              <td>R$ 30,00</td>
               <td>R$ 18,00</td>
               <td>R$ 36,00</td>
             </tr>
+            <tr>
+              <td class='botcel'></td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    aqui <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    aqui <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    aqui <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    aqui <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
           </tbody>
-          </thead>
-
         </table>
+        <table class="mob-price">
+          <tbody>
+
+            <tr>
+              <th class='entradas'>Entradas</th>
+              <th>Seg. a Quin.</th>
+              <th>Sex. a Dom.</th>
+              <th class='last-cel'></th>
+            </tr>
+
+
+            <tr>
+              <td class='meia'>Meia</td>
+              <td>R$ 10,00</td>
+              <td>R$ 15,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
+            <tr>
+              <td class='inteira'>Inteira</td>
+              <td>R$ 20,00</td>
+              <td>R$ 30,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class='imgddd'>
+                  Meia<img src="../../img/óculos 3d 2.svg">
+                </div>
+              </td>
+              <td>R$ 13,00</td>
+              <td>R$ 18,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+
+            </tr>
+            <tr>
+              <td>
+                <div class='imgddd'>
+                  Inteira<img src="../../img/óculos 3d 2.svg">
+                </div>
+              </td>
+              <td>R$ 26,00</td>
+              <td>R$ 36,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <p>*Na compra de ingressos através do ingresso.com é cobrada uma taxa de serviço adicional no valor de R$ 3,00.
+        </p>
+      </div>
+      <div class='trailer'>
+        <div class='trailertitle'>
+          <h1>Trailer</h1><img src="../../img/trailer.svg">
+        </div>
+        <div class='teaser'>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/HluMG9tJXHM" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+
+        </div>
       </div>
     </main>
 
@@ -131,7 +262,7 @@
           <h1>Localização</h1>
         </div>
         <div>
-          <a href="https://goo.gl/maps/amv8DZQXdt1jqLfK7">Rua Padre Ayres, Número 255 em Miramar João Pessoa</a>
+          <a href="https://goo.gl/maps/rNH9AvDaHqWQU7JP8">Av. Primeiro de Maio, 720 - Jaguaribe</a>
         </div>
       </section>
 
