--- a/pages/filmes/F5.html
+++ b/pages/filmes/F5.html
@@ -1,129 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../../css/pages.css">
-	<link rel="stylesheet" href="../../css/filmes.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="icon" href="../../img/icone.svg">
-    <title>Cinetech</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="../../css/pages.css">
+  <link rel="stylesheet" href="../../css/filmes.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="icon" href="../../img/icone.svg">
+  <title>Cinetech</title>
 </head>
+
 <body>
-    <div class="layout">
+  <div class="layout">
 
-        <header class="header">
-            <a href="../../index.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
-            <nav>
-                <ul class="menu">
-										<li><a href="../../index.html">Home</a></li>
-                    <li><a href="../../pages/sobre.html">Sobre Nós</a></li>
-                    <li><a href="#f">Comunicação</a></li>
-                </ul>
-            </nav>
+    <header class="header">
+      <a href="../../index.html" class="logo"><img class='ticket' src="../../img/logo.svg" alt="Cinetech"></a>
+      <nav>
+        <ul class="menu">
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../../pages/sobre.html">Sobre Nós</a></li>
+          <li><a href="#f">Comunicação</a></li>
+        </ul>
+      </nav>
 
-        </header>
-		
-        <main class="content">
-			<div class='movie'>
-				<img src="../../img/pantera negra.jpg" alt="Pantera Negra">
-				<div class="info">
-					<p class="sinotitle">Sinopse:</p>
-					<p>Conheça a história de T'Challa, príncipe do reino de Wakanda, que perde o seu pai e viaja para os Estados
-						Unidos, onde tem contato com os Vingadores. Entre as suas habilidades estão a velocidade, inteligência e os
-						sentidos apurados.</p>
-					<p>Faixa etária: </p>
-					<p>14 anos</p>
-				</div>
-				<div class="sessoes">
-					<p>Sessões:</p>
-					<table>
-						<thead>
-							<tr>
-								<th id='firstcel'></th>
-								<th>Segunda-feira</th>
-								<th>Terça-feira</th>
-								<th>Quarta-feira</th>
-								<th>Quinta-feira</th>
-								<th>Sexta-feira</th>
-								<th>Sábado</th>
-								<th>Domingo</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Filme 1</td>
-								<td>14:30 - 17:30 - 19:30</td>
-								<td>14:30 - 17:30 - 19:30</td>
-								<td>14:30 - 17:30 - 19:30</td>
-								<td>14:30 - 17:30 - 19:30</td>
-								<td>14:30 - 17:30 - 19:30</td>
-								<td>15:30 - 18:30 - 20:30</td>
-								<td>15:30 - 18:30 - 20:30</td>
-							</tr>
-							<tr>
-					</table>
-				</div>
-			</div>
+    </header>
 
+    <main class="content">
 
+      <div class='movie'>
+        <img src="../../img/pantera negra.jpg" alt="Pantera Negra">
+        <div class="detalhes">
+          <h1>Pantera Negra</h1>
+          <div class="info">
+            <div class="sinopse">
+              <h2>Sinopse</h2>
+              <p>Conheça a história de T'Challa, príncipe do reino de Wakanda, que perde o seu pai e viaja para os
+                Estados Unidos, onde tem contato com os Vingadores. Entre as suas habilidades estão a velocidade,
+                inteligência e os sentidos apurados.</p>
+            </div>
+            <div class='idade14'>
+              <h3>Faixa etária</h3>
+              <p>14</p>
+            </div>
+            <div class='duracao'>
+              <h3>Duração</h3>
+              <p>135 min</p>
+            </div>
+            <div class='genero'>
+              <h3>Gênero</h3>
+              <p>Ação, Aventura</p>
+            </div>
+            <div class="sessoes">
+              <h3>Sessões</h3>
+              <table>
+                <tbody>
+                  <tr>
+                    <td>Seg. a Quin.</td>
+                    <td>14:30 - 17:30 - 20:30</td>
+                  </tr>
+                </tbody>
+                <tbody>
+                  <tr>
+                    <td>Sex. a Dom.</td>
+                    <td>15:30 - 18:30 - 21:30</td>
+                  </tr>
+              </table>
+            </div>
+          </div>
+        </div>
 
-			</br>
-			<h2>Preços</h2>
-			<table>
-				<thead>
-					<tr>
-						<th id='secondcel'></th>
-						<th>Meia-entrada</th>
-						<th>Entrada inteira</th>
-					</tr>
-				<tbody>
-					<tr>
-						<td>14:00 às 18:00 (seg. à quin.)</td>
-						<td>R$ 15,00</td>
-						<td>R$ 30,00</td>
-					</tr>
-					<tr>
-						<td>18:00 às 22:00 (sex. à dom.)</td>
-						<td>R$ 18,00</td>
-						<td>R$ 36,00</td>
-					</tr>
-				</tbody>
-				</thead>
+      </div>
+      <div class='pricetitle'>
+        <h1>Tabela de preços</h1><img src="../../img/ticket.svg">
+      </div>
+      <div class="preços">
+        <table>
+          <thead>
+            <tr>
+              <th class='topcel'></th>
+              <th class='meia'>Meia-entrada</th>
+              <th class='inteira'>Entrada inteira</th>
+              <th>
+                <div class='imgddd'>
+                  Meia-entrada<img src="../../img/óculos 3d 2.svg">
+                </div>
+              </th>
+              <th>
+                <div class='imgddd'>
+                  Entrada inteira<img src="../../img/óculos 3d 2.svg">
+                </div>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Seg. a Quin.</td>
+              <td>R$ 10,00</td>
+              <td>R$ 20,00</td>
+              <td>R$ 13,00</td>
+              <td>R$ 26,00</td>
+            </tr>
+            <tr>
+              <td>Sex. a Dom.</td>
+              <td>R$ 15,00</td>
+              <td>R$ 30,00</td>
+              <td>R$ 18,00</td>
+              <td>R$ 36,00</td>
+            </tr>
+            <tr>
+              <td class='botcel'></td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    aqui <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    aqui <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    aqui <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    aqui <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <p>*Na compra de ingressos através do ingresso.com é cobrada uma taxa de serviço adicional no valor de R$ 3,00.
+        </p>
+      </div>
+      <div class='trailer'>
+        <div class='trailertitle'>
+          <h1>Trailer</h1><img src="../../img/trailer.svg">
+        </div>
+        <div class='teaser'>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/wL4a4MafSjQ" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
 
-			</table>
+        </div>
+      </div>
+    </main>
 
-		</main>
-		<footer class="footer" id="f">
-            <section class="fale-conosco">   
-                <h2>Fale Conosco</h2>
-                <ul>
-                    <li><p><a href='#'>cinetech@gmail.com <i class=""> </i></a></p></li>
-                    <li><p><a href='https://api.whatsapp.com/send?phone=5583985003240'>(83) 98500-3240 <i class=""> </i></a></p></li>
-                    <li><p><a href='#'>(83) 0800 089 015 <i class=""> </i></a></p></li>
-            </section> 
+    <footer class="footer" id="f">
+      <section class="fale-conosco">
+        <h2>Fale Conosco</h2>
+        <ul>
+          <li>
+            <p><a href='#'>cinetech@gmail.com <i class=""> </i></a></p>
+          </li>
+          <li>
+            <p><a href='https://api.whatsapp.com/send?phone=5583985003240'>(83) 98500-3240 <i class=""> </i></a></p>
+          </li>
+          <li>
+            <p><a href='#'>(83) 0800 089 015 <i class=""> </i></a></p>
+          </li>
+      </section>
 
-            <section class="social">
-                <h1>Redes Sociais</h1>
-                <ul>
-                  <li><a href="#"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
-                  <li><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
-                </ul>
-            </section>
-                        
-            <section class="local">
-                <div><h1>Localização</h1></div>
-                <div><a href="https://goo.gl/maps/amv8DZQXdt1jqLfK7">Rua Padre Ayres, Número 255 em Miramar João Pessoa</a></div>
-            </section>
+      <section class="social">
+        <h1>Redes Sociais</h1>
+        <ul>
+          <li><a href="#"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+        </ul>
+      </section>
 
-            <section class="copyright col-wide">
-                <p>Cinetech © 2022. Alguns direitos reservados.</p>
-            </section>
-        </footer>
-        
-    </div>
+      <section class="local">
+        <div>
+          <h1>Localização</h1>
+        </div>
+        <div>
+          <a href="https://goo.gl/maps/rNH9AvDaHqWQU7JP8">Av. Primeiro de Maio, 720 - Jaguaribe</a>
+        </div>
+      </section>
+
+      <section class="copyright col-wide">
+        <p>Cinetech © 2022. Alguns direitos reservados.</p>
+      </section>
+    </footer>
+
+  </div>
 </body>
+
 </html>
