--- a/pages/modelo.html
+++ b/pages/modelo.html
@@ -14,7 +14,7 @@
     <div class="layout">
 
         <header class="header">
-            <a href="../pages/sobre.html" class="logo"><img src="../img/logo.svg" alt="Cinetech"></a>
+            <a href="../pages/index.html" class="logo"><img src="../img/logo.svg" alt="Cinetech"></a>
             <nav>
                 <ul class="menu">
 										<li><a href="../index.html">Home</a></li>
@@ -55,8 +55,12 @@
             </section>
                         
             <section class="local">
-                <div><h1>Localização</h1></div>
-                <div><a href="https://goo.gl/maps/amv8DZQXdt1jqLfK7">Rua Padre Ayres, Número 255 em Miramar João Pessoa</a></div>
+                <div>
+									<h1>Localização</h1>
+								</div>
+        				<div>
+									<a href="https://goo.gl/maps/rNH9AvDaHqWQU7JP8">Av. Primeiro de Maio, 720 - Jaguaribe</a>
+								</div>
             </section>
 
             <section class="copyright col-wide">
